feat: big refactor